--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Developer Tawhid - login-and-signup-authentication-form-in-javascript </title>
     <link rel="stylesheet" href="css/style.css">
     <script>
-        localStorage.removeItem("login_db");
 
         if(!localStorage.getItem('registration_db')) {
             localStorage.setItem("registration_db", JSON.stringify([]))
